@@ -59,16 +59,16 @@ static void
 close_src(void)
 {
   struct list_context *old;
-  
+
   assert(state.lst.src != NULL);
-    
+
   old = state.lst.src;
   state.lst.src = state.lst.src->prev;
   free(old);
 
 }
 
-static void 
+static void
 lst_line(const char *format, ...)
 {
   if (state.lst.f) {
@@ -92,15 +92,15 @@ find_line_number(gp_symbol_type *symbol, int line_number)
   while (section != NULL) {
     line = section->line_numbers;
     while (line != NULL) {
-      if ((line->symbol == symbol) && 
+      if ((line->symbol == symbol) &&
           (line->line_number == line_number)) {
         if (section != line_section) {
-          /* switching sections, so update was_org with the new 
+          /* switching sections, so update was_org with the new
              address */
           state.lst.was_org = line->address;
           line_section = section;
-        }  
-        return line;    
+        }
+        return line;
       }
       line = line->next;
     }
@@ -108,6 +108,25 @@ find_line_number(gp_symbol_type *symbol, int line_number)
   }
 
   return NULL;
+}
+
+static char *
+expand(const char *buf)
+{
+  int is, id;
+  static char dest[520], c;
+
+  for (is = 0, id = 0; (c = buf[is]) != '\0' && id < sizeof(dest) - 2; ++is) {
+    if (c == '\t') {
+      unsigned int n = 8 - (id % 8);
+      while (n-- && id < sizeof(dest) - 2)
+        dest[id++] = ' ';
+    }
+    else
+      dest[id++] = c;
+  }
+  dest[id] = '\0';
+  return dest;
 }
 
 static void
@@ -120,15 +139,13 @@ write_src(int last_line)
   gp_linenum_type *line = NULL;
   gp_boolean first_time;
   int org = 0;
-  unsigned short data;
-  int num_words;
 
   /* if the source file wasn't found, can't write it to the list file */
   if (state.lst.src->missing_source)
     return;
 
   while (1) {
-    
+
     /* when last_line is 0 print all lines, else print to last_line */
     if ((last_line) && (state.lst.src->line_number > last_line))
       break;
@@ -150,6 +167,8 @@ write_src(int last_line)
       line = find_line_number(state.lst.src->symbol,
                               state.lst.src->line_number);
       while (line) {
+        unsigned int len;
+
         /* print all instructions generated by this line of the source */
 
         if (line->line_number != state.lst.src->line_number)
@@ -161,42 +180,76 @@ write_src(int last_line)
         }
         state.cod.emitting = 1;
         org = line->address;
-        state.class->i_memory_get(line_section->data, org, &data);
-        num_words = gp_disassemble(line_section->data,
-                                   org,
-                                   state.class,
-                                   dasmbuf,
-                                   sizeof(dasmbuf));
-        lst_line("%06lx   %04x     %-24s %s",
-                 gp_processor_byte_to_org(state.class, line->address),
-                 data, 
-                 dasmbuf,
-                 linebuf);
-        state.lst.was_org = org;
-        cod_lst_line(COD_NORMAL_LST_LINE);
-	org += 2;
-        if (num_words != 1) {
-          state.lst.was_org = org;
-          state.class->i_memory_get(line_section->data, org, &data);
-          lst_line("%06lx   %04x", gp_processor_byte_to_org(state.class, org), data);
+        len = b_memory_get_unlisted_size(line_section->data, org);
+        if (0 == len) {
+          lst_line("%42s %s", "", linebuf);
           cod_lst_line(COD_NORMAL_LST_LINE);
-	  org += 2;
-          if (line->next) {
-            /* skip the line number for the other half of this instruction */
-            line = line->next;
+        }
+        else {
+          if (org & 1 || len < 2) {
+            /* even address or less then two byts to disassemble: disassemble one byte */
+            if (0 != len) {
+              unsigned char byte;
+
+              b_memory_assert_get(line_section->data, org, &byte);
+              gp_disassemble_byte(line_section->data,
+                                  org,
+                                  state.class, 
+                                  dasmbuf, 
+                                  sizeof(dasmbuf));
+              lst_line("%06lx   %02x       %-24s %s",
+                       gp_processor_byte_to_org(state.class, org),
+                       (unsigned short)byte,
+                       expand(dasmbuf),
+                       linebuf);
+              b_memory_set_listed(line_section->data, org, 1);
+              state.lst.was_org = org;
+              cod_lst_line(COD_NORMAL_LST_LINE);
+              ++org;
+            }
+          }
+          else {
+            unsigned short word;
+            int num_bytes;
+            state.class->i_memory_get(line_section->data, org, &word);
+            num_bytes = gp_disassemble_size(line_section->data,
+                                       org,
+                                       state.class,
+                                       dasmbuf,
+                                       sizeof(dasmbuf), len);
+            lst_line("%06lx   %04x     %-24s %s",
+                     gp_processor_byte_to_org(state.class, org),
+                     word,
+                     expand(dasmbuf),
+                     linebuf);
+            b_memory_set_listed(line_section->data, org, num_bytes);
+            state.lst.was_org = org;
+            cod_lst_line(COD_NORMAL_LST_LINE);
+            org += 2;
+            if (num_bytes > 2) {
+              state.lst.was_org = org;
+              state.class->i_memory_get(line_section->data, org, &word);
+              lst_line("%06lx   %04x", gp_processor_byte_to_org(state.class, org), word);
+              cod_lst_line(COD_NORMAL_LST_LINE);
+              org += 2;
+              if (line->next) {
+                /* skip the line number for the other half of this instruction */
+                line = line->next;
+              }
+            }
           }
         }
         first_time = false;
         line = line->next;
       }
-      
+
       if (first_time) {
-        lst_line("%42s %s", " ", linebuf);
+        lst_line("%42s %s", "", linebuf);
         state.cod.emitting = 0;
         cod_lst_line(COD_NORMAL_LST_LINE);
       }
     }
-    
+
     state.lst.src->line_number++;
   }
 
@@ -212,7 +265,7 @@ lst_init(void)
 
   if (state.lstfile != named) {
     snprintf(state.lstfilename, sizeof(state.lstfilename),
-	     "%s.lst", state.basefilename);
+             "%s.lst", state.basefilename);
   }
 
   if ((gp_num_errors) || (state.lstfile == suppress)) {
@@ -283,13 +336,13 @@ write_lst(void)
         cod_lst_line(COD_NORMAL_LST_LINE);
         cod_lst_line(COD_NORMAL_LST_LINE);
         cod_lst_line(COD_NORMAL_LST_LINE);
-        cod_lst_line(COD_NORMAL_LST_LINE);      
+        cod_lst_line(COD_NORMAL_LST_LINE);
         first_time = false;
       }
     } else if (symbol->class == C_EOF) {
       /* print the rest of the current file then, close it */
       write_src(0);
-      close_src();    
+      close_src();
     } else if (symbol->class == C_LIST) {
       if (strcasecmp(symbol->name, ".list") == 0) {
         write_src(symbol->value);
