@@ -32,7 +32,7 @@ enum lib_modes {
   ar_null
 };
 
-#define GPLIB_VERSION_STRING ("gplib-" VERSION)
+#define GPLIB_VERSION_STRING ("gplib-" VERSION " (" __DATE__ ")")
 #define MAX_OBJ_NAMES 256
 
 extern struct gplib_state {
