@@ -1,3 +1,11 @@
+2011-12-04  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/gpasm.h, gplink/gplink.h, gputils/gpdasm.h, gputils/gplib.h,
+    gputils/gpstrip.h, gputils/gpvc.h, gputils/gpvo.h:
+    added build date to --version
+  * gplink/lst.c, libgputils/gpdis.c, libgputils/gpdis.h, libgputils/gpmemory.c,
+    libgputils/gpmemory.h:
+    fixed bug #3437346: Information missing from list file
+
 2011-11-21  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
     libgputils/gpdis.c:
